gpt-3.5の廃止、APIの更新、Azure OpenAIの対応の追加